updated background colors, email button, and footer spacing issues

--- a/css/main.css
+++ b/css/main.css
@@ -77,6 +77,9 @@ textarea {
 /* ==========================================================================
    Author's custom styles
    ========================================================================== */
+body {
+  background-color: #F6F3EF; }
+
 h2 {
   font-family: sans-serif;
   font-size: 3.5em;
@@ -87,13 +90,12 @@ h2 {
 header img {
   position: relative;
   width: 100%;
-  height: 350px;
-  background-color: #31343F; }
+  height: auto; }
 
 .container header .headblock {
   position: absolute;
   text-align: center;
-  top: 20px;
+  top: 65px;
   width: 100%; }
 
 .header-title h1 {
@@ -116,8 +118,8 @@ header img {
   padding: 0; }
   .main-menu .main-buttons {
     display: inline-block;
-    margin-right: 1.25%;
-    margin-left: 1.25%;
+    margin-right: .5%;
+    margin-left: .5%;
     list-style-type: none;
     cursor: pointer; }
     .main-menu .main-buttons a {
@@ -126,30 +128,59 @@ header img {
       text-decoration: none;
       color: white;
       border: .4ex solid white;
+      border-radius: 5px;
+      font-size: 1.5ex;
+      line-height: 3em; }
+  .main-menu .email-button {
+    display: inline-block;
+    margin-right: .5%;
+    margin-left: .5%;
+    list-style-type: none;
+    cursor: pointer; }
+    .main-menu .email-button a {
+      display: block;
+      width: 6em;
+      text-decoration: none;
+      color: white;
+      border: .4ex solid white;
+      border-radius: 5px;
       font-size: 1.5ex;
       line-height: 3em; }
   .main-menu .tab-current {
-    background-color: white; }
+    background-color: white;
+    border-radius: 5px; }
     .main-menu .tab-current a {
       color: #31343F;
-      background-color: white; }
+      background-color: white;
+      border-radius: 5px;
+      font-weight: bold; }
   .main-menu .main-buttons:hover {
-    background-color: white; }
+    background-color: white;
+    border-radius: 5px; }
     .main-menu .main-buttons:hover a:hover {
-      color: #31343F; }
+      color: #31343F;
+      font-weight: bold; }
+  .main-menu .email-button:hover {
+    background-color: white;
+    border-radius: 5px; }
+    .main-menu .email-button:hover a:hover {
+      color: #31343F;
+      font-weight: bold; }
 
 .body-container {
   color: #393A3B;
   font-family: serif;
-  margin-left: 5%;
-  margin-right: 5%; }
+  margin-left: 2.5%;
+  margin-right: 2.5%;
+  background-color: white;
+  padding: 0 1.5em 15em 1.5em;
+  border-radius: 10px; }
   .body-container div {
     display: none; }
   .body-container .section-current {
     display: block; }
   .body-container #section-1 {
-    margin-top: 2.5em;
-    margin-bottom: 2.5em; }
+    margin-top: 2.5em; }
     .body-container #section-1 h4 {
       font-family: sans-serif;
       font-weight: lighter;
@@ -162,8 +193,7 @@ header img {
       text-decoration: none;
       color: #9B9B9A; }
   .body-container #section-2 {
-    margin-top: 2.5em;
-    margin-bottom: 2.5em; }
+    margin-top: 2.5em; }
     .body-container #section-2 .blog-post .small {
       display: inline-block;
       width: 13%;
@@ -178,7 +208,6 @@ header img {
       width: 75%;
       padding-left: 1.5%; }
       .body-container #section-2 .blog-post .blog-content h3 {
-        font-weight: lighter;
         font-size: 2.25ex;
         font-family: sans-serif;
         margin: 0;
@@ -187,14 +216,19 @@ header img {
         display: none; }
         .body-container #section-2 .blog-post .blog-content .blog-excerpt a {
           text-decoration: none;
-          font-family: sans-serif;
+          font-family: serif;
           font-size: 2ex;
           color: #80A6CD; }
       .body-container #section-2 .blog-post .blog-content .show {
         display: block; }
   .body-container #section-3 {
-    margin-top: 2.5em;
-    margin-bottom: 2.5em; }
+    margin-top: 2.5em; }
+    .body-container #section-3 h4 {
+      font-family: sans-serif;
+      font-weight: lighter;
+      color: #B5B5B5;
+      padding: 0;
+      margin: 0; }
 
 .post-header {
   background-color: #31343F;
@@ -246,29 +280,34 @@ header img {
 .footer {
   background-color: #31343F;
   color: white;
-  font-size: 1.25ex;
+  font-size: 1.5ex;
   font-weight: 300;
   padding: 0;
   padding-bottom: .5em;
   margin: 0;
-  margin-top: 10em;
+  margin-top: 3em;
   text-align: center; }
   .footer p {
-    display: inline-block; }
-  .footer .social-links p {
-    display: inline-block;
-    margin-top: 0; }
-    .footer .social-links p a {
-      display: block;
-      text-decoration: none;
-      color: white;
-      border: .25ex solid white;
-      width: 5em;
-      line-height: 2.5em;
-      border-radius: 5px; }
-    .footer .social-links p a:hover {
-      background-color: white;
-      color: #31343F; }
+    margin: 0;
+    padding-top: 1.25em; }
+  .footer .social-links {
+    list-style-type: none;
+    margin: 0;
+    padding: 1.25em 0; }
+    .footer .social-links li {
+      display: inline-block;
+      margin: 0 0.25em; }
+      .footer .social-links li a {
+        display: block;
+        text-decoration: none;
+        color: white;
+        border: .25ex solid white;
+        width: 5em;
+        line-height: 2.5em;
+        border-radius: 2.5px; }
+      .footer .social-links li a:hover {
+        background-color: white;
+        color: #31343F; }
 
 /* ==========================================================================
    Helper classes
